--- a/package.json
+++ b/package.json
@@ -141,10 +141,12 @@
     "@typescript-eslint/parser": "8.44.1",
     "audit-ci": "^7.1.0",
     "aws-sdk-client-mock": "^4.1.0",
+    "axe-core": "^4.10.3",
     "cheerio": "^1.1.2",
     "chokidar": "^4.0.3",
     "concurrently": "^9.2.1",
     "cypress": "^15.3.0",
+    "cypress-axe": "^1.7.0",
     "cypress-multi-reporters": "^2.0.5",
     "esbuild": "^0.25.8",
     "esbuild-plugin-clean": "^1.0.1",
