--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -22,6 +22,7 @@ generic-service:
     CALCULATE_RELEASE_DATES_API_URL: "https://calculate-release-dates-api.hmpps.service.justice.gov.uk"
     AUDIT_ENABLED: "false"
     COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api.hmpps.service.justice.gov.uk"
+    RECORD_RECALLS_UI_URL: "https://record-a-recall.hmpps.service.justice.gov.uk"
     FEATURES_VIEW_ONLY_ENABLED: 'true'
 
 generic-prometheus-alerts:
