--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -23,7 +23,7 @@ generic-service:
     AUDIT_ENABLED: "false"
     COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api.hmpps.service.justice.gov.uk"
     RECORD_RECALLS_UI_URL: "https://record-a-recall.hmpps.service.justice.gov.uk"
-    FEATURES_VIEW_ONLY_ENABLED: 'true'
+    FEATURES_VIEW_ONLY_ENABLED: 'false'
 
 generic-prometheus-alerts:
   alertSeverity: legacy-replacement-alerts
