--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -27,6 +27,8 @@ generic-service:
     COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api-dev.hmpps.service.justice.gov.uk"
     RECORD_RECALLS_UI_URL: "https://record-a-recall-dev.hmpps.service.justice.gov.uk"
     FEATURES_VIEW_ONLY_ENABLED: 'false'
+    BOOK_SECURE_MOVE_UI_URL: "https://hmpps-book-secure-move-frontend-staging.apps.cloud-platform.service.justice.gov.uk"
+    BOOK_VIDEO_LINK_UI_URL: "https://book-a-video-link-dev.prison.service.justice.gov.uk"
 
   scheduledDowntime:
     enabled: true
