--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -27,6 +27,8 @@ generic-service:
     COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api-preprod.hmpps.service.justice.gov.uk"
     RECORD_RECALLS_UI_URL: "https://record-a-recall-preprod.hmpps.service.justice.gov.uk"
     FEATURES_VIEW_ONLY_ENABLED: 'false'
+    BOOK_SECURE_MOVE_UI_URL: "https://hmpps-book-secure-move-frontend-preprod.apps.cloud-platform.service.justice.gov.uk"
+    BOOK_VIDEO_LINK_UI_URL: "https://book-a-video-link-preprod.prison.service.justice.gov.uk"
 
   allowlist:
     penetration-test-ip-1: 54.37.241.156/30
