--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -24,6 +24,8 @@ generic-service:
     COURT_CASES_RELEASE_DATES_API_URL: "https://court-cases-release-dates-api.hmpps.service.justice.gov.uk"
     RECORD_RECALLS_UI_URL: "https://record-a-recall.hmpps.service.justice.gov.uk"
     FEATURES_VIEW_ONLY_ENABLED: 'false'
+    BOOK_SECURE_MOVE_UI_URL: "https://bookasecuremove.service.justice.gov.uk"
+    BOOK_VIDEO_LINK_UI_URL: "https://book-a-video-link.prison.service.justice.gov.uk"
 
 generic-prometheus-alerts:
   alertSeverity: legacy-replacement-alerts
